# sde

./: LICENSE  README.md  makefile  sde.cabal  stack.yaml
app/: Main.hs
plot/: Main.hs
src/: Lib.hs
test/: LibSpec.hs
