name:                sde
version:             0.1.0.0
synopsis:            Numerical experiments with stochastic differential equations
description:         Please see README.md
homepage:            https://github.com/ocramz/sde
license:             BSD3
license-file:        LICENSE
author:              ocramz
maintainer:          zocca.marco@gmail.com
copyright:           Marco Zocca 2016
category:            Numeric SDE
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Plots
  build-depends:       base >= 4.7 && < 5
                     , mwc-probability
                     , Chart
                     , Chart-diagrams

executable sde
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , mwc-probability
                     , Chart
                     , Chart-diagrams
                     , sde

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base
                     , sde
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/sde
