name:                sde
version:             0.2.0.0
synopsis:            Numerical experiments with stochastic differential equations
description:         Please see README.md
homepage:            https://github.com/ocramz/sde
license:             BSD3
license-file:        LICENSE
author:              ocramz
maintainer:          zocca.marco@gmail.com
copyright:           Marco Zocca 2016
category:            Numeric SDE
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     -- , diagrams-lib >= 1.3.1.4
                     -- , diagrams-rasterific
                     , logging-effect
                     , mtl >= 2.2.1
                     , mwc-probability
                     , mwc-probability-transition >= 0.3.0.3
                     -- , plots
                     , primitive >= 0.6.1.0
                     , transformers >= 0.5.2.0
                     -- , pipes

executable sde
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , mtl >= 2.2.1
                     , mwc-probability
                     , primitive >= 0.6.1.0
                     , sde
                     , transformers >= 0.5.2.0
                     -- , pipes

-- executable sde-plot
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      plot
--   main-is:             Main.hs
--   build-depends:       base
--                      , diagrams-lib >= 1.3.1.4
--                      , diagrams-rasterific
--                      , diagrams-postscript
--                      , mtl >= 2.2.1
--                      , mwc-probability
--                      , plots
--                      , primitive >= 0.6.1.0
--                      , sde
--                      , transformers >= 0.5.2.0
--                      -- , pipes

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       QuickCheck
                     , base
                     , hspec
                     , mtl >= 2.2.1
                     , primitive >= 0.6.1.0
                     , sde
                     , transformers >= 0.5.2.0
                     -- , pipes

source-repository head
  type:     git
  location: https://github.com/ocramz/sde
